containers/Landing/scss: prevent masq image from overlapping on profile avatars

--- a/src/containers/Landing/Landing.module.scss
+++ b/src/containers/Landing/Landing.module.scss
@@ -14,7 +14,7 @@
 
   .section1 {
     padding-top: 68px;
-    height: 666px;
+    min-height: 485px;
     // background-color: $color-blue-dark;
     background-repeat: no-repeat;
     background-size: cover;
@@ -57,7 +57,7 @@
 
   .section2 {
     width: 100%;
-    margin-top: -150px;
+    margin-top: 30px;
 
     .Box {
       display: flex;
